syntax="proto3";

package currency;

import "google/protobuf/timestamp.proto";

option go_package="./proto/currency";

message Currency {
    string ID = 1;
    int32 SerialNumber = 2;
    string name = 3;
    string AccountNumber = 4;
    int32 ExchangeRate = 5;
    google.protobuf.Timestamp CreatedAt = 6;
    string CreatedBy = 7;
    google.protobuf.Timestamp UpdatedAt = 8;
    string UpdatedBy = 9;
    google.protobuf.Timestamp DeletedAt = 10;
    string DeletedBy = 11;
}

message Filter {
    int32 Offset = 1;
    int32 Limit = 2;
    string SortBy = 3;
    string Order = 4;
    string SearchTerm = 5;
}

message Stats {
    int32 Count = 1;
    int32 TotalAmount = 2;
}

message CreateCurrencyRequest {
    Currency Curr = 1;
}

message CreateCurrencyResponse {
    string ID = 1;
}

message GetCurrencyRequest {
    Currency Curr = 1;
}

message GetCurrencyResponse {
    Currency Curr = 1;
}

message UpdateCurrencyRequest {
    Currency Curr = 1;
}

message UpdateCurrencyResponse {
    Currency Curr = 1;
}

message DeleteCurrencyRequest {
    Currency Curr = 1;
}

message DeleteCurrencyResponse {}

message ListCurrencyRequest {
    Filter Filter = 1;
}

message ListCurrencyResponse {
   repeated Currency curr = 1;
}

message CurrencyStatsRequest {
    Filter Filter = 1;
}

message CurrencyStatsResponse {
    Stats Stats = 1;
}

service CurrencyService {
    rpc CreateCurrency(CreateCurrencyRequest) returns(CreateCurrencyResponse) {}
    rpc GetCurrency(GetCurrencyRequest) returns(GetCurrencyResponse) {}
    rpc UpdateCurrency(UpdateCurrencyRequest) returns(UpdateCurrencyResponse) {}
    rpc DeleteCurrency(DeleteCurrencyRequest) returns(DeleteCurrencyResponse) {}
    rpc ListCurrency(ListCurrencyRequest) returns(ListCurrencyResponse) {}
    rpc CurrencyStats(CurrencyStatsRequest) returns(CurrencyStatsResponse) {}
}